smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/numbers/negative-with-no-digit.smithy
// Syntax error at line 7, column 7: Invalid number '-': '-' must be followed by a digit | Model
namespace smithy.example

@trait
integer test

@test(-)
string MyString
